  even if the grid is currently too small to show all of them or if there are
  no unfrozen rows/columns remaining.

- Calling wxImageList methods on an invalid wxImageList object now consistently
  results in assert failures instead of just failing silently. To avoid these
  asserts, make sure that wxImageList is created with a valid size before
  operating on it.


Changes in behaviour which may result in build errors
-----------------------------------------------------

- Symbols deprecated in 3.0 are still available in this version but disabled by
  default, you need to set WXWIN_COMPATIBILITY_3_0 to 1 to enable them. Symbols
  deprecated in 2.8 are not available any longer.

- Building with wxUSE_UNICODE=0 is not supported any longer.

- wxMotif and wxGTK1 ports have been removed, please use wxWidgets 3.2 if you
  still need them.

- Generic wxSearchCtrl doesn't provide methods that make sense only for
  multiline text controls any longer, for consistency with the other ports.

- wxOnAssert() overload taking wide character file name was removed. If you
  call it for any reason, please use one of the other overloads instead.


3.3.0: (released 2022-??-??)
----------------------------

NOTE: In addition to the note below, also incorporate (either by
      copy or by reference) all the changes in the 3.2 branch (i.e.
      everything in this file after 3.2.0 in that branch).

NOTE: This file is updated only before the release, please use

    $ git log --notes=changelog --format='%N' v3.2.0..|grep .

      to see all the change log entries since the last release.

      To update the notes, fetch them first:

    $ git fetch origin refs/notes/changelog:refs/notes/changelog

      then use the following command to update them locally

    $ git notes --ref=changelog add -m 'wxPort: description.'

      and finally push it to the server.

    $ git push origin refs/notes/changelog:refs/notes/changelog
