@@ -950,7 +950,6 @@ static const wxString _fs_windowstyle_labels[] = {
     "wxSUNKEN_BORDER",
     "wxRAISED_BORDER",
     "wxNO_BORDER",
-    "wxTRANSPARENT_WINDOW",
     "wxTAB_TRAVERSAL",
     "wxWANTS_CHARS",
     "wxVSCROLL",
@@ -965,7 +964,6 @@ static const long _fs_windowstyle_values[] = {
     wxSUNKEN_BORDER,
     wxRAISED_BORDER,
     wxNO_BORDER,
-    wxTRANSPARENT_WINDOW,
     wxTAB_TRAVERSAL,
     wxWANTS_CHARS,
     wxVSCROLL,
